# SDK_INNOWAY_ESP

document/: SDK_Innoway_User_Guide.docx
documents/: SDK_Innoway_User_Guide.docx
example/example_4G/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
example/example_4G/main/: CMakeLists.txt  app_main.c  innoway_sim.h  main.c  nb_innoway.h  sim_mqtt_innoway_main.c
example/example_wifi/main/: CMakeLists.txt  test_sim.c  wifi_innoway_main.c
include/: innoway_sim.h  mqtt_innoway.h
